MOD split module