@@ -3,49 +3,71 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
+  <groupId>com.jk</groupId>
+  <artifactId>web-demo</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <name>web-demo</name>
+  <description>Demo project for Spring Boot</description>
+  <packaging>pom</packaging>
+
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.4.5</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
-  <groupId>com.jk</groupId>
-  <artifactId>demo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>demo</name>
-  <description>Demo project for Spring Boot</description>
+
   <properties>
+    <!-- 基本配置 -->
+    <skipTests>true</skipTests>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>11</java.version>
-    <skipTests>true</skipTests>
+    <jdk.version>11</jdk.version>
+    <jwt.version>3.7.0</jwt.version>
+
+    <maven.compiler.release>11</maven.compiler.release>
+    <maven.compiler.source>${jdk.version}</maven.compiler.source>
+    <maven.compiler.target>${jdk.version}</maven.compiler.target>
+    <maven.compiler.version>3.8.0</maven.compiler.version>
+    <maven.failsafe.version>2.22.2</maven.failsafe.version>
+    <maven.surefire.version>2.22.0</maven.surefire.version>
+    <maven.resources.version>3.1.0</maven.resources.version>
+    <spring-boot.maven-plugin.version>2.2.5.RELEASE</spring-boot.maven-plugin.version>
+
+    <!-- 版本控制 -->
+    <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
+    <lombok.version>1.18.20</lombok.version>
+    <mybatis-spring-boot-starter.version>2.1.4</mybatis-spring-boot-starter.version>
+    <shiro.version>1.7.1</shiro.version>
+
   </properties>
+
+  <modules>
+    <module>demo-app</module>
+    <module>demo-api</module>
+    <module>demo-server</module>
+    <module>demo-dao</module>
+    <module>demo-test</module>
+    <module>demo-core</module>
+  </modules>
 
   <dependencies>
     <!--lombok-->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.20</version>
+      <version>${lombok.version}</version>
     </dependency>
 
-    <!--web功能的起步依赖-->
+    <!--mysql-->
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-aop</artifactId>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
     </dependency>
 
-    <!--热部署-->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-devtools</artifactId>
-    </dependency>
-
-    <!--测试-->
+    <!--test-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -58,144 +80,72 @@
       </exclusions>
     </dependency>
 
-
-    <!--JDBC-->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-jdbc</artifactId>
-    </dependency>
-
-    <!--mybatis-->
-    <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
-      <artifactId>mybatis-spring-boot-starter</artifactId>
-      <version>2.1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
-      <artifactId>mybatis-spring-boot-starter-test</artifactId>
-      <version>2.2.0</version>
-    </dependency>
-
-
-    <!--mySQL驱动-->
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-
-    <!--security-->
-    <!--    <dependency>-->
-    <!--      <groupId>org.springframework.boot</groupId>-->
-    <!--      <artifactId>spring-boot-starter-security</artifactId>-->
-    <!--      <version>2.5.0</version>-->
-    <!--    </dependency>-->
-    <!--    <dependency>-->
-    <!--      <groupId>org.springframework.security.oauth</groupId>-->
-    <!--      <artifactId>spring-security-oauth2</artifactId>-->
-    <!--      <version>2.5.1.RELEASE</version>-->
-    <!--    </dependency>-->
-    <!--    <dependency>-->
-    <!--          <groupId>org.springframework.security</groupId>-->
-    <!--          <artifactId>spring-security-jwt</artifactId>-->
-    <!--          <version>1.1.1.RELEASE</version>-->
-    <!--        </dependency>-->
-    <!--        <dependency>-->
-    <!--          <groupId>org.springframework.security</groupId>-->
-    <!--          <artifactId>spring-security-test</artifactId>-->
-    <!--          <version>5.3.9.RELEASE</version>-->
-    <!--        </dependency>-->
-
-    <!-- JWT 支持 -->
-    <dependency>
-      <groupId>com.auth0</groupId>
-      <artifactId>java-jwt</artifactId>
-      <version>3.8.2</version>
-    </dependency>
-
-    <!--mp-->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-amqp</artifactId>
-    </dependency>
-
-
-    <!--druid 连接池-->
-    <!--    <dependency>-->
-    <!--      <groupId>com.alibaba</groupId>-->
-    <!--      <artifactId>druid-spring-boot-starter</artifactId>-->
-    <!--      <version>1.2.3</version>-->
-    <!--    </dependency>-->
-
-    <!--redis-->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-redis</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-cache</artifactId>
-      <version>2.5.0</version>
-    </dependency>
-
     <!--flywaydb-->
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
       <version>5.2.4</version>
     </dependency>
-    <!--    <dependency>-->
-    <!--      <groupId>org.flywaydb</groupId>-->
-    <!--      <artifactId>flyway-maven-plugin</artifactId>-->
-    <!--      <version>7.8.2</version>-->
-    <!--    </dependency>-->
-
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>de.codecentric</groupId>
-      <artifactId>spring-boot-admin-starter-client</artifactId>
-      <version>2.4.1</version>
-    </dependency>
-    <dependency>
-      <groupId>de.codecentric</groupId>
-      <artifactId>spring-boot-admin-server</artifactId>
-      <version>2.4.1</version>
-    </dependency>
   </dependencies>
-
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mybatis.spring.boot</groupId>
+        <artifactId>mybatis-spring-boot-starter</artifactId>
+        <version>${mybatis-spring-boot-starter.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.shiro</groupId>
+        <artifactId>shiro-spring</artifactId>
+        <version>${shiro.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${maven.compiler.version}</version>
+          <configuration>
+            <release>${maven.compiler.release}</release>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven.surefire.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven.failsafe.version}</version>
+          <configuration>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>${maven.resources.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+          <version>${spring-boot.maven-plugin.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-
-      <plugin>
-        <groupId>org.mybatis.generator</groupId>
-        <artifactId>mybatis-generator-maven-plugin</artifactId>
-        <version>1.3.7</version>
-        <configuration>
-          <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
-          <verbose>true</verbose>
-          <overwrite>true</overwrite>
-          <!--<includeCompileDependencies>true</includeCompileDependencies>-->
-        </configuration>
-        <dependencies>
-          <!--必须要引入数据库驱动-->
-          <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.23</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-
       <plugin>
         <groupId>org.flywaydb</groupId>
         <artifactId>flyway-maven-plugin</artifactId>
@@ -222,7 +172,7 @@
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
-    </plugins>
+      </plugins>
   </build>
 
 </project>
